src/css/3-screens/5-l.css
/**********************************************************************************
 * L sized screen - Small desktop or a laptop
 **********************************************************************************/
@media screen and (min-width: 64em) {

/*============== Header ==============*/
	header {
		height: 167px;
	}
	.header-container {
		height: 131px;
	}


/*============== Logo ==============*/
	.header-container .logo-text {
		font-size: 3.8em;
		height: 100px;
	}

	/* prevent Opera workaround on other browsers */
	.header-container .logo-text-left {margin-left: calc(1px - 1px);}
	.header-container .logo-text-right {margin-right: calc(1px - 1px);}


/*============== Menu Buttons ==============*/
	.toggle-wrapper {align-items: flex-end;}

	.toggle-theme-wrapper {margin-left: 4px;}

	.toggle-language-wrapper {
		margin-right: auto; /* workaround for Opera */
		order: 2;
	}

	.toggle-main-menu-wrapper {
		width: 24%; /* workaround for Opera */
		width: calc(50% - 266px);
	}
	.toggle-main-menu-wrapper .header-button {display: none;}

	.header-button .toggle-label {display: inline;}

	.header-button,
	.menu-main > ul > li > .menu-item {
		align-items: center;
		border-bottom: 0 none;
		border-radius: 4px;
		display: flex;
		font-size: 1em;
		margin: 2px;
		padding: 6px 8px;
	}

	.header-button .icon,
	.menu li > .menu-item .icon {
		margin: 1px 8px 0 2px;
	}

	.header-button .fa-chevron-up,
	.header-button .fa-chevron-down,
	.menu-main > ul > li > .menu-item .fa-chevron-up,
	.menu-main > ul > li > .menu-item .fa-chevron-down {
		font-size: 0.5em;
		margin: 3px 0 0 4px;
	}


/*============== Menus ==============*/
	header .menu li > .menu-item {
		font-size: 1em;
	}

	.menu-music:not(.menu-closed) {
		padding-top: 1px; /* fix the misalignment due to the relative position */
	}

	.menu-language-choice li, .menu-music li {
		margin: 0 4px;
	}

	.menu-wrapper {flex: 0.5;}
	.menu-theme-choice, .menu-language-choice, .menu-music {
		flex: none;
		min-width: 300px;
	}


/*============== Main Menu ==============*/
	.menu-main-wrapper {
		display: flex;
		justify-content: flex-end;
		position: relative;
		top: -40px;
	}

	.menu-main,
	.menu-main.menu-closed {
		box-shadow: none;
		display: block;
		flex: none;
		height: auto;
		min-width: 380px;
		overflow: initial; /* otherwise menu-music has no shadow */
		text-align: right;
		width: inherit;
	}

	.menu-main > ul {
		display: flex;
		flex-flow: row;
		justify-content: flex-end;
		margin: 0 4px 0 0;
		padding-bottom: 0;
	}

	.menu-main > ul > li {
		padding: 0;
	}


/*============== Language Menu ==============*/


/*============== Music Menu ==============*/
	.menu-music > ul {
		display: flex;
		flex-flow: column;
		padding-left: 0;
		text-align: initial;
	}
	.menu-music li:first-child .menu-item {padding-top: 12px;}


/*============== Pages ==============*/
	.content {
		font-size: 0.95em;
		/* 100% - header-height - footer - player - self padding */
		min-height: calc(100vh - 167px - 40px - 40px - 20px);
		padding-top: 10px;
	}

	.lyrics-super-wrapper {flex-flow: row;}
	.content-lyrics .lyrics-wrapper {
		flex: 0.45;
		margin: 0 6px;
	}
	.content-lyrics .english-translation-link {display: none;}
	.content-lyrics .lyrics-wrapper .lyrics {white-space: nowrap;}

	.content-discography .album-tracks .album-duration-container .album-duration-label {padding-top: 8px;}


/*============== Playlist ==============*/
	.menu-playlist li > .menu-item, .menu-playlist-wrapper .playlist-search input {
		font-size: 0.9em;
	}


/*============== Player ==============*/
	.player .track-title,
	.player .loading-indicator,
	.player .track-progress-bar-container {
		font-size: 0.9em;
	}

	.player .player-controls {font-size: 1.2em;}
	.player .player-controls .player-button {width: 48px;}

/* Track Title / Loading Indicator */
	.player .track-title,
	.player .loading-indicator {
		flex: none;
		margin: 0;
		width: 340px;
	}

/* Progress Bar */
	.player .total-time::before {content: ""; margin: 0 auto;}

	.player .track-progress-bar-container {
		align-items: center;
		display: flex;
		flex: 38%;
	}

	.player .track-progress-bar {
		align-items: center;
		border-radius: 0.5em;
		cursor: pointer;
		display: inline-flex;
		flex: 1;
		height: 1em;
		margin: 0 8px;
	}
	.player-error .track-progress-bar {cursor: not-allowed;}
	.player-loading .track-progress-bar-container,
	.player-loading .track-progress-bar {
		cursor: wait;
	}

	.player .track-progress-bar-background {
		flex: 1;
		height: 50%;
	}

	.player .track-progress {
		height: 100%;
		width: 0;
	}

	.player .track-progress, .player .track-progress-bar-background {
		border-radius: inherit;
	}

/* Time Balloon */
	.player .time-balloon {
		bottom: 21px;
		position: fixed;
	}
	.player:not(.player-loading):not(.player-error) .track-progress-bar:hover .time-balloon {
		display: block;
	}

	.player .time-balloon-time-wrapper {
		position: relative; /* z-index does not work with position: static */
	}
	.player .time-balloon-time {
		font-size: 0.9em;
		padding: 3px 7px;
		position: relative;
		z-index: 10; /* stacking the elements properly, not to cut the pointer with .time-baloon-time's border */
	}

	.player .time-balloon-pointer {
		height: 10px;
		margin: 0 auto;
		position: relative;
		top: -7px;
		transform: rotateZ(45deg);
		width: 10px;
	}


/*============== Footer ==============*/
	footer .social-label {
		display: block;
		font-size: 0.85em;
		margin-left: 10px;
	}
	footer .social-icons a {font-size: 21px;}
	footer .copyright {
		font-size: 0.85em;
		margin-right: 10px;
	}
}

